--- a/estilo/style.css
+++ b/estilo/style.css
@@ -51,7 +51,7 @@ header>p{
   font-family: var(--fonte-padrao);
   font-size:1.2em ;
   max-width: 500px;
-  margin-bottom: 30px;
+  padding-bottom: 50px;
   margin:auto;
   padding-left: 10px;
   padding-right: 10px;
